# regexmodel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
benchmarks/: benchmark.py  run_all_benchmark.py
benchmarks/accurate/: avg_log_like_pc_success.csv  avg_log_like_per_char.csv  benchmark.json  fit_time.csv  n_parameters.csv  statistics_time.csv  success_rate.csv
benchmarks/fast/: avg_log_like_pc_success.csv  avg_log_like_per_char.csv  benchmark.json  fit_time.csv  n_parameters.csv  statistics_time.csv  success_rate.csv
examples/: Cheatsheet.ipynb  benchmark.ipynb  regex.html  tutorial.ipynb  workspace.ipynb
regexmodel/: __init__.py  _version.py  data2.py  datastructure.py  model.py  model2.py  regexclass.py  regexclass2.py  util.py  visualization.py
scripts/: benchmark.py  create_dataframe.py  run_all_benchmark.py
scripts/data/: avg_log_like_per_char.csv  benchmark.json  fit_time.csv  n_parameters.csv  statistics_time.csv  success_rate.csv
scripts/data2/: avg_log_like_pc_success.csv  avg_log_like_per_char.csv  benchmark.json  fit_time.csv  n_parameters.csv  statistics_time.csv  success_rate.csv
tests/: test_regex.py
