[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "regexmodel"
authors = [
    {name = "Raoul Schram", email = "r.d.schram@uu.nl"},
]
description = "Package modeling structured strings with regex."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["regex", "fitting", "modeling", "statistics"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "polars>=0.19.8",
    "numpy>=1.20",
]

dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/sodascience/regexmodel"
# documentation = "https://metasynth.readthedocs.io/en/latest/index.html"

[project.optional-dependencies]
test = [
    "pytest", "pylint", "pydocstyle", "mypy", "ruff", "nbval",
#    "sphinx<7.0.0", "sphinx-rtd-theme", "sphinxcontrib-napoleon", 
#    "sphinx-autodoc-typehints", "sphinx_inline_tabs", "sphinx_copybutton",
#    "XlsxWriter"
]

tutorial = [
    "pyvis", "networkx", "faker", 
]


[tool.setuptools]
packages = ["regexmodel"]

[tool.setuptools_scm]
write_to = "regexmodel/_version.py"

[tool.pylint.'MASTER']
ignore-patterns="_version.py"

[tool.pylint.'FORMAT']
max-line-length=100
max-locals=35
max-args=10

[tool.ruff]
exclude = ["regexmodel/_version.py"]
line-length=100

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "pyvis.*",
]
ignore_missing_imports = true
